--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <h1 id="terra_cell_header" class="heading header__item">Terra Cell</h1>
                       <br>
                       <br>
-                      <h3 id="terra_cell_slogan" class="heading header__item">here is slogan</h3>
+                      <h3 id="terra_cell_slogan" class="heading header__item">A solid foundation ensures future value.</h3>
                   </header>
 
                   <div class="scroller">
