--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <span onclick="openNav()" class="menu-icon__line"></span>
                     </div>
 
-                      <h1 id="terra_cell_header" class="heading header__item">Terra Cell</h1>
+                      <h1 id="terra_cell_header" class="heading header__item">Vuluc Design</h1>
                       <br>
                       <br>
                       <h3 id="terra_cell_slogan" class="heading header__item">A solid foundation ensures future value.</h3>
